# alx_travel_app

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirement.txt
alx_travel_app/: asgi.py  settings.py  urls.py  wsgi.py
conf/: settings.py
